fix: jumps when scrolling

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,13 +22,16 @@
   @apply bg-tertiary;
 }
 
-html {
-  scroll-behavior: smooth;
+@media (hover: hover) {
+  html {
+    scroll-behavior: smooth;
+  }
 }
 
 @layer base {
   body {
     @apply font-mono bg-neutral overflow-x-hidden;
+    overscroll-behavior-y: none;
   }
 }
 
